fix: use classic stream collector available in java 8